# amneziawg-go-proxy

./: CLAUDE.md  README.md
.claude/: settings.json
.claude/skills/build-verify/: SKILL.md
.claude/skills/commit-pr/: SKILL.md
.claude/skills/sync-upstream/: SKILL.md
device/: device.go  device_test.go  obf.go  obf_imitate.go  obf_imitate_golden_test.go  obf_imitate_obf.go  obf_imitate_obf_test.go  obf_imitate_quic.go  obf_imitate_quic_test.go  obf_imitate_test.go  obf_imitate_whole_gen_test.go  obf_imitate_whole_test.go  send.go  uapi.go  uapi_test.go
device/testdata/: imitate_vectors.txt
docs/: KNOWN_ISSUES.md
docs/superpowers/plans/: 2026-06-15-client-imitation-tier1.md  2026-06-16-client-imitation-tier2.md  2026-06-16-client-imitation-tier3.md  2026-06-16-client-imitation-tier4.md
docs/superpowers/reviews/: 2026-06-15-client-side-traffic-imitation-review.md
docs/superpowers/specs/: 2026-06-15-client-side-traffic-imitation-design.md
tools/imitate-vectors/: Cargo.toml  README.md  regen.sh  vendor.sh
tools/imitate-vectors/src/: main.rs  reference.rs
